- Added hover opacity everywhere - Fixed fullscreen alignment - Removed unnecessary parameter

--- a/packages/fayr-ivp/src/components/chat/Chat.scss
+++ b/packages/fayr-ivp/src/components/chat/Chat.scss
@@ -50,7 +50,7 @@
     display: grid;
     grid-template-rows: var(--chat-row-template);
 
-    transition: transform 0.5s ease-in-out;
+    transition: transform 0.5s ease-in-out, opacity 0.3s ease-in-out;
 
     height: 50%;
 
@@ -60,6 +60,7 @@
     position: absolute;
     right: 0;
     bottom: 0;
+    opacity: var(--videoplayer-controls-opacity);
 
     @media (max-width: 1024px) {
         width: 60%;
