--- a/packages/fayr-ivp/src/components/chimeWeb/ChimeWeb.scss
+++ b/packages/fayr-ivp/src/components/chimeWeb/ChimeWeb.scss
@@ -307,14 +307,6 @@ a.btn {
     }
 }
 
-.overlay--hover #player-controls {
-    background: rgba(0, 0, 0, 0);
-}
-
-.overlay--hover .player-btn {
-    display: flex;
-}
-
 .player-btn {
     outline: none;
     appearance: none;
