--- a/packages/fayr-ivp/src/components/chimeWeb/Controls/Controls.module.scss
+++ b/packages/fayr-ivp/src/components/chimeWeb/Controls/Controls.module.scss
@@ -48,6 +48,8 @@
 
     z-index: 1;
 
+    opacity: var(--videoplayer-controls-opacity);
+
     @media (max-width: 1024px) {
         padding: 0.5rem;
     }
@@ -57,7 +59,7 @@
 
     overflow-x: clip;
 
-    transition: transform 0.5s ease-in-out;
+    transition: opacity 0.3s ease-in-out, transform 0.5s ease-in-out;
 
     .FayrIcon {
         height: 35px;
