--- a/packages/fayr-ivp/src/components/videoPlayer/controls/VideoPlayerControls.module.scss
+++ b/packages/fayr-ivp/src/components/videoPlayer/controls/VideoPlayerControls.module.scss
@@ -1,3 +1,7 @@
+.FullScreen {
+    width: 80%;
+}
+
 .PlayerControlsContainer {
     position: absolute;
     top: 5%;
